Fixed Light theme and search results on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -32,10 +32,6 @@
   }
 
   body {
-    @apply flex h-full flex-col bg-gray-100 text-gray-700 dark:bg-gray-700 dark:text-gray-200;
-  }
-
-  #footer-pin {
-    @apply min-h-[calc(100%_-_97px)];
+    @apply mb-28 flex h-full flex-col bg-gray-100 text-gray-700 dark:bg-gray-700 dark:text-gray-200;
   }
 }
